Use Map/Set creation helpers
Signed-off-by: Jens Bannmann <jens.b@web.de>