@@ -1,11 +1,11 @@
 package com.github.bannmann.puretemplate;
 
+import static java.util.Map.entry;
+
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 
@@ -17,29 +17,18 @@ import java.util.Map;
 // using <Object> because this can handle Date and Calendar objects, which don't have a common supertype.
 public class DateRenderer implements AttributeRenderer<Object>
 {
-    public static final Map<String, Integer> formatToInt;
-
-    static
-    {
-        final Map<String, Integer> map = new HashMap<String, Integer>();
-
-        map.put("short", DateFormat.SHORT);
-        map.put("medium", DateFormat.MEDIUM);
-        map.put("long", DateFormat.LONG);
-        map.put("full", DateFormat.FULL);
-
-        map.put("date:short", DateFormat.SHORT);
-        map.put("date:medium", DateFormat.MEDIUM);
-        map.put("date:long", DateFormat.LONG);
-        map.put("date:full", DateFormat.FULL);
-
-        map.put("time:short", DateFormat.SHORT);
-        map.put("time:medium", DateFormat.MEDIUM);
-        map.put("time:long", DateFormat.LONG);
-        map.put("time:full", DateFormat.FULL);
-
-        formatToInt = Collections.unmodifiableMap(map);
-    }
+    public static final Map<String, Integer> formatToInt = Map.ofEntries(entry("short", DateFormat.SHORT),
+        entry("medium", DateFormat.MEDIUM),
+        entry("long", DateFormat.LONG),
+        entry("full", DateFormat.FULL),
+        entry("date:short", DateFormat.SHORT),
+        entry("date:medium", DateFormat.MEDIUM),
+        entry("date:long", DateFormat.LONG),
+        entry("date:full", DateFormat.FULL),
+        entry("time:short", DateFormat.SHORT),
+        entry("time:medium", DateFormat.MEDIUM),
+        entry("time:long", DateFormat.LONG),
+        entry("time:full", DateFormat.FULL));
 
     @Override
     public String toString(Object value, String formatString, Locale locale)
